--- a/batchAssociatesLambda/batchAssociatesLambda.yaml
+++ b/batchAssociatesLambda/batchAssociatesLambda.yaml
@@ -1,12 +1,12 @@
 # Make the associate lambda from an existingimage
 AWSTemplateFormatVersion: 2010-09-09
-Description: lambda for associate lambda
+Description: lambda for batch associates lambda
 Resources:
   AssociateLambda:
     Type: AWS::Lambda::Function
     Properties:
       Code:
-        ImageUri: !Join ["/",[!Join [".",[!Sub "${AWS::AccountId}", "dkr", "ecr", !Sub "${AWS::Region}", "amazonaws", "com"]], "associatelambda:latest"]]
+        ImageUri: !Join ["/",[!Join [".",[!Sub "${AWS::AccountId}", "dkr", "ecr", !Sub "${AWS::Region}", "amazonaws", "com"]], "batch-associates-lambda:latest"]]
       Role: arn:aws:iam::855430746673:role/caliber-mobile-cf
-      FunctionName: "batchAssociates"
+      FunctionName: "batchassociates"
       PackageType: "Image"
