Updated qcweek lambda name

--- a/cloudFormation/gateway.yaml
+++ b/cloudFormation/gateway.yaml
@@ -19,7 +19,7 @@ Parameters:
     Default: batchassociates
   qcWeekLambdaName:
     Type: String
-    Default: qcweek
+    Default: batchWeekLambda
   qcCategoriesLambdaName:
     Type: String
     Default: qccategories
